add line break to the recipes link in home page

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/heaven_on_earth_cake.html">Heaven on Earth Cake</a>
-    <a href="./recipes/zebra_cake_recipe.html">Zebra Cake</a>
-    <a href="./recipes/ice_cream_lasagna.html">Ice Cream Lasagna</a>
+    <a href="./recipes/heaven_on_earth_cake.html">Heaven on Earth Cake</a><br>
+    <a href="./recipes/zebra_cake_recipe.html">Zebra Cake</a><br>
+    <a href="./recipes/ice_cream_lasagna.html">Ice Cream Lasagna</a><br>
 </body>
 </html>
