move home link to the top of the recieps files
the user dont need to scroll all the way down to access the home link. and also i did this change to test out the subject and description commit message.lol.

--- a/recipes/heaven_on_earth_cake.html
+++ b/recipes/heaven_on_earth_cake.html
@@ -6,6 +6,7 @@
     <title>Heaven on Earth Cake</title>
 </head>
 <body>
+    <br><a href="../index.html">Home</a>
     <h1>Heaven on Earth Cake</h1>
     <img src="../recipe_img/HoE.jpeg" alt="A picture of Heaven on Earth Cake">
    
@@ -67,6 +68,5 @@
 
 
 
-    <a href="../index.html">Home</a>
 </body>
 </html>
