--- a/recipes/ice_cream_lasagna.html
+++ b/recipes/ice_cream_lasagna.html
@@ -6,6 +6,7 @@
     <title>Ice Cream Lasagna</title>
 </head>
 <body>
+    <br><a href="../index.html">Home</a>
     <h1>Ice Cream Lasagna</h1>
     <!-- add image and description -->
     <img src="../recipe_img/ice_cream_las.jpeg" alt="image of ice cream Lasagna">
@@ -35,6 +36,6 @@
         <li>Freeze dessert until solidly frozen, 1 to 2 hours.</li>
     </ol>
 
-     <a href="../index.html">Home</a>
+     
 </body>
 </html>
