--- a/recipes/zebra_cake_recipe.html
+++ b/recipes/zebra_cake_recipe.html
@@ -6,6 +6,7 @@
     <title>Zebra Cake</title>
 </head>
 <body>
+    <br><a href="../index.html">Home</a>
   <h1>Zebra Cake</h1> 
   
      <!-- so we paste the image first and a bit oif intoduction -->
@@ -39,6 +40,5 @@ Frost cookie log with remaining whipped cream and sprinkle with grated chocolate
     </ol>
 
 
-    <a href="../index.html">Home</a>
 </body>
 </html>
